Добавлена стратегия "Три свечи"